--- a/pong-styles.css
+++ b/pong-styles.css
@@ -5,7 +5,7 @@ Feel free to play with things like color or font
 
 html,
 body {
-  padding: 0;
+  padding: 10;
   margin: 0;
 }
 #game {
@@ -18,7 +18,7 @@ body {
 }
 
 #left-paddle {
-  background-color: yellow;
+  background-color: red;
   left: 10px;
   height: 25px;
 }
@@ -35,7 +35,7 @@ body {
   bottom: 0;
   position: absolute;
   margin: 10px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica,Georgia, sans-serif;
 }
 
 #errors-debug {
@@ -44,7 +44,7 @@ body {
   position: absolute;
   margin: 10px;
   padding-left: 400px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Georgia, sans-serif;
 }
 
 #errors {
@@ -77,7 +77,7 @@ body {
 .ball {
   width: 15px;
   height: 15px;
-  background-color: yellow;
+  background-color: white;
   border-radius: 10px;
   position: absolute;
   left: 50px;
