--- a/pong-styles.css
+++ b/pong-styles.css
@@ -24,7 +24,7 @@ body {
 }
 
 #right-paddle {
-  background-color: black;
+  background-color: red;
   right: 10px;
  
   
@@ -77,7 +77,7 @@ body {
 .ball {
   width: 15px;
   height: 15px;
-  background-color: white;
+  background-color: red;
   border-radius: 10px;
   position: absolute;
   left: 50px;
