--- a/pong-styles.css
+++ b/pong-styles.css
@@ -7,6 +7,8 @@ html,
 body {
   padding: 10;
   margin: 0;
+  background-color: #4d00000;
+        
 }
 #game {
   margin: 4px;
@@ -72,6 +74,7 @@ body {
   top: 0;
   width: 5px;
   position: absolute;
+  background-color: red;
 }
 
 .ball {
@@ -89,6 +92,7 @@ body {
   position: absolute;
   font-family: Arial, Helvetica, sans-serif;
   top: 0;
+  background-color: white;
 }
 
 #left-score {
