--- a/pong-styles.css
+++ b/pong-styles.css
@@ -98,7 +98,7 @@ p {
 }
 
 .score {
-  display: block;
+  display: none;
   position: absolute;
   font-family: Arial, Helvetica, sans-serif;
   top: 0;
